fixed button error on mobile screen

--- a/css/main.css
+++ b/css/main.css
@@ -268,8 +268,4 @@ h2 {
   .slider {
     width: 100%;
   }
-  .h-blue,
-  .h-red {
-  font-size: 1.6rem;
-  }
 }
